Fixing css alignment on ipad

--- a/indycast.net/assets/css/main.css
+++ b/indycast.net/assets/css/main.css
@@ -1143,7 +1143,7 @@ small {
   border-radius: 0 8px 8px 0;
 }
 @media screen and (max-width: 1280px) {
-  label { 
+  #day-picker label { 
     text-align: right;
   }
   #description {
@@ -1167,7 +1167,7 @@ small {
     margin: 0;
   }
 }
-/* Keep the hover affect off of mobile */
+/* Keep the hover effect off of mobile */
 @media screen and (min-width: 1280px) {
   a {
     -moz-transition: color 0.2s ease-in-out, border-bottom-color 0.2s ease-in-out;
